Add libs to Dockerfile for pip; add UDF example

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -15,7 +15,9 @@ RUN apt-get update && apt-get install -y \
     zip \
     git \
     cmake \
-    ninja-build
+    ninja-build \
+    zlib1g-dev \
+    libssl-dev
 
 # WASI SDK
 RUN cd /opt && \
